<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- Alert Slider -->
    <string name="slider_title">Alert Slider</string>
    <string name="mute_media_title">Mute media volume on silent mode</string>
    <string name="mute_media_summary">This will only take effect for speaker</string>

    <!-- Device Settings -->
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>

    <!-- Display Modes -->
    <string name="display_title">Display Modes</string>
    <string name="hbm_mode_summary">Instantly enable the peak luminance of the display</string>
    <string name="hbm_mode_title">High brightness</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_title">Automatic High brightness</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness threshold (lux)</string>
    <string name="auto_hbm_threshold_summary">Adjust peak luminance of the display </string>
    <string name="tile_hbm_mode">High brightness</string>
    <string name="dc_mode_summary">Reduces screen flicker while brightness is low</string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="tile_dc_mode">DC-Dimming</string>

    <!-- Screen off Gestures : Input -->
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gesture_two_finger_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_title">Swipe up with one finger</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_home_title">Swipe up from the home button</string>
    <string name="touchscreen_gesture_one_finger_down_swipe_title">Swipe down with one finger</string>
    <string name="touchscreen_gesture_one_finger_left_swipe_title">Swipe left with one finger</string>
    <string name="touchscreen_gesture_one_finger_right_swipe_title">Swipe right with one finger</string>
    <string name="touchscreen_gesture_single_tap_title">Single tap</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_c_title">Draw the letter \"C\"</string>
    <string name="touchscreen_gesture_letter_e_title">Draw the letter \"e\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_v_title">Draw the letter \"V\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>
    <string name="touchscreen_gesture_letter_z_title">Draw the letter \"Z\"</string>
    <!-- Screen off Gestures : Actions -->
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music</string>
    <string name="touchscreen_gesture_action_previous_track">Play the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Play the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
    <string name="touchscreen_gesture_action_ambient_display">Show ambient display</string>

    <!-- Dolby -->
    <string name="dolby_category">Dolby</string>
    <string name="enable_dolby_title">Dolby Atmos</string>
    <string name="enable_dolby_summary">Switching requires a reboot to take effect</string>
    <string name="dolby_title">Configuration</string>
    <string name="dolby_summary">Configure the audio output based on media content</string>

    <!-- FPS Info -->
    <string name="fps_title">FPS Info</string>
    <string name="fps_info_title">FPS Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    <string name="fps_info_color_title">Text Color</string>
    <string name="fps_info_color_green">Green</string>
    <string name="fps_info_color_red">Red</string>
    <string name="fps_info_color_blue">Blue</string>
    <string name="fps_info_color_yellow">Yellow</string>
    <string name="fps_info_color_black">Black</string>
    <string name="fps_info_color_accent">Follow System</string>
    <string name="fps_info_position_title">Overlay Position</string>
    <string name="fps_info_position_top_left">Top left</string>
    <string name="fps_info_position_top_center">Top center</string>
    <string name="fps_info_position_top_right">Top right</string>
    <string name="fps_info_position_bottom_left">Bottom left</string>
    <string name="fps_info_position_bottom_center">Bottom center</string>
    <string name="fps_info_position_bottom_right">Bottom right</string>
    <string name="fps_info_text_size_title">Text Size</string>

    <!-- Unsupported feature -->
    <string name="unsupported_feature">This feature is unavailable on current kernel</string>

    <!-- Vibration Strength -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>

    <!-- Touchscreen -->
    <string name="touchscreen_title">Touchscreen</string>
    <string name="game_mode_title">Game Mode</string>
    <string name="game_mode_summary">Force enable 240Hz sampling rate for all applications</string>
    <string name="game_mode_warning">May decrease battery life</string>
</resources>
