<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.xtended.device.DeviceSettings">

    <PreferenceCategory
        android:key="slider"
        android:title="@string/slider_title">

        <SwitchPreference
            android:key="mute_media"
            android:icon="@drawable/ic_audio_media"
            android:title="@string/mute_media_title"
            android:summary="@string/mute_media_summary"
            android:persistent="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="graphics"
        android:title="@string/display_title">

        <SwitchPreference
            android:key="dc"
            android:icon="@drawable/ic_dc_mode"
            android:summary="@string/dc_mode_summary"
            android:title="@string/dc_mode_title" />

        <SwitchPreference
            android:key="auto_hbm"
            android:icon="@drawable/ic_autohbm_mode"
            android:summary="@string/auto_hbm_summary"
            android:title="@string/auto_hbm_title" />

        <org.xtended.device.DeviceSettings.AutoHBMThresholdPreference
            android:key="auto_hbm_threshold"
            android:icon="@drawable/ic_autohbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary" />
            
	<SwitchPreference
            android:key="hbm"
            android:icon="@drawable/ic_hbm_mode"
            android:summary="@string/hbm_mode_summary"
            android:title="@string/hbm_mode_title"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="fps"
        android:title="@string/fps_title">
		
        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_overlay"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <ListPreference
            android:key="fps_info_position"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_position"
            android:title="@string/fps_info_position_title"
            android:summary="%s"
            android:entries="@array/fps_info_position_entries"
            android:entryValues="@array/fps_info_position_values" />

        <ListPreference
            android:key="fps_info_color"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_color"
            android:title="@string/fps_info_color_title"
            android:summary="%s"
            android:entries="@array/fps_info_color_entries"
            android:entryValues="@array/fps_info_color_values" />

        <org.xtended.device.DeviceSettings.ProperSeekBarPreference
            android:key="fps_info_text_size"
            android:icon="@drawable/ic_fps_text"
            android:title="@string/fps_info_text_size_title"
            android:persistent="true"
            android:max="5"
            android:min="1"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>

    <PreferenceCategory
    android:key="touchscreen"
    android:title="@string/touchscreen_title">
        <SwitchPreference
            android:key="game_mode"
            android:icon="@drawable/ic_game_mode"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/game_mode_warning" 
            android:persistent="false" />

        <Preference 
            android:key="touchscreen_gesture_settings"	
            android:icon="@drawable/ic_gestures_icon"
            android:title="@string/touchscreen_gesture_settings_title"
            android:summary="@string/touchscreen_gesture_settings_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.xtended.device.DeviceSettings"
                    android:targetClass="org.xtended.device.DeviceSettings.TouchscreenGestureSettings" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <org.xtended.device.DeviceSettings.ProperSeekBarPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibration"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head"
            android:persistent="true"
            android:max="3"
            android:min="0"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>
</PreferenceScreen>
